--- a/lang/en.json
+++ b/lang/en.json
@@ -2,7 +2,7 @@
    "lRr4ec": {
       "attackTypes": {
          "jiujitsu": "Jiujistu",
-         "kenjustu": "Kenjustu"
+         "kenjustu": "Kenjustu en"
       }
    }
 }
