ROLL SYSTEM WORKS FUCK YEAH

--- a/lang/en.json
+++ b/lang/en.json
@@ -11,6 +11,13 @@
             "jiujitsu": "Jiujitsu",
             "heavy-weapons": "Heavy weapons"
          }
+      },
+      "rings": {
+         "air": "Air",
+         "earth": "Earth",
+         "fire": "Fire",
+         "water": "Water",
+         "void": "Void"
       }
    }
 }
